Aggiunte funzioni di routing per bloccare accesso diretto ai component.

--- a/components/footer.html
+++ b/components/footer.html
@@ -2,3 +2,5 @@
 <footer class="bg-black text-white text-center py-4 mt-10">
     <p>&copy; 2023 Esplora Berlino. Tutti i diritti riservati.</p>
 </footer>
+
+<script src="router.js">
