--- a/components/header.html
+++ b/components/header.html
@@ -4,3 +4,5 @@
     <div class="absolute inset-0 bg-black bg-opacity-50"></div>
     <h1 id="title" class="z-10 text-3xl md:text-5xl text-white text-center">Supporto</h1>
 </header>
+
+<script src="router.js"></script>
