Aggiunta foto header e reso titolo sticky

--- a/components/header.html
+++ b/components/header.html
@@ -1,8 +1,8 @@
 <!-- Header -->
-<header class="relative flex items-center justify-center h-[40vh] bg-cover bg-center" style="background-image: url('immagini/header.jpg');">
+<header class="relative flex items-center justify-center bg-cover bg-center min-h-[50vh] md:min-h-[75vh]" style="background-image: url('immagini/header.jpeg');">
     <!-- Overlay -->
     <div class="absolute inset-0 bg-black bg-opacity-50"></div>
-    <h1 id="title" class="z-10 text-3xl md:text-5xl text-white text-center">Supporto</h1>
+    <h1 id="title" class="z-10 text-3xl md:text-5xl text-white text-center sticky top-0 p-8"></h1>
 </header>
 
 <script src="router.js"></script>
